fix long title of playlist covers play button in playlist page

--- a/css/common.css
+++ b/css/common.css
@@ -462,7 +462,6 @@ svg {
 
 .page .playlist-detail .detail-head .detail-head-title h2 {
   font-size: var(--h2-title-font-size);
-  height: 33px;
 }
 /* page playlist detail end */
 
